--- a/devops/jenkinsfile
+++ b/devops/jenkinsfile
@@ -1,1 +1,14 @@
+pipeline {
+      agent any 
+      stages {
+         
+	stage ('clone'){
+            steps {    
+                sh ‘git url: ‘https://github.com/devopsacademy2015/hello-world.git’, branch: ‘master’
+            } 
+}
 
+     
+   
+    }    
+}
